[package]
name = "yuuma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
tokio = { version = "1.18.1", features = ["macros", "rt", "time"] }
tui = "0.19.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio-timer = "0.2.13"
crossterm = "0.25.0"
clock-core = "0.0.7"
chrono = { version = "0.4.23", features = ["serde"] }
hhmmss = "0.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"